# skills_manager

./: .gitignore  AGENT(MimoX‘s_Desktop的冲突副本1_2026-05-27 16-53-34).md  AGENT.md  AGENTS.md  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  REVIEW.md  directory_analysis.md  index.html  package-lock.json  package.json  preview.html  target_analysis.md  tsconfig.json  vite.config.ts
.mimocode/plans/: 1782837226286-brave-river.md
assets/: README.en.md
scripts/: build-portable.ps1
src/: App.tsx  api.ts  index.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adapter.rs  catalog.rs  catalog_index.rs  cherry_db.rs  cherry_studio.rs  commands.rs  error.rs  hash.rs  lib.rs  main.rs  manifest.rs  mcp_adapter.rs  mcp_claude.rs  mcp_codex.rs  mcp_opencode.rs  mcp_service.rs  mcp_trae.rs  models.rs  native_app(MimoX‘s_Desktop的冲突副本1_2026-05-27 19-18-04).rs  native_app.rs  service.rs  store.rs
src/components/layout/: CommandBar.tsx  Sidebar.tsx  ThemeSwitcher.tsx  Titlebar.tsx
src/components/ui/: Toast.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  separator.tsx  tooltip.tsx
src/components/views/: AgentsView.tsx  CatalogView.tsx  ImportAgentDialog.tsx  McpView.tsx  OverviewView(MimoX‘s_Desktop的冲突副本1_2026-05-28 03-01-09).tsx  OverviewView.tsx  SettingsView.tsx  SkillInstallDialog.tsx  SkillsView(MimoX‘s_Desktop的冲突副本1_2026-05-28 03-01-09).tsx  SkillsView.tsx  UserTagEditor.tsx
src/hooks/: useAppState.ts  useTheme.ts
