[package]
name = "skill-sync-manager"
version = "0.2.1"
description = "A multi-agent skills manager"
authors = ["Skill Sync Manager"]
edition = "2021"
default-run = "skill-sync-manager"

[lib]
name = "skill_sync_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "1"
ureq = { version = "2", features = ["tls"] }
walkdir = "2"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
